# Ender-Plotter-Slicer-Project

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  start_ender_plotter_slicer.bat  start_ender_plotter_slicer.sh
docs/: development.md  neptune_2_setup.md  raster_import.md
ender_plotter_slicer/: app.py  config.py  document.py  gcode.py  geometry.py  preview.py  profiles.py  project_io.py  raster_importer.py  svg_importer.py  text_path.py  validator.py
ender_plotter_slicer/gui/: canvas.py  dialogs.py  main_window.py  property_panel.py  settings_panel.py
examples/: README.md  sample_project.plotproj.json
machine_profiles/: README.md  elegoo_neptune_2_pen_plotter.json
tools/: smoke_test.py
